--- a/README
+++ b/README
@@ -6,8 +6,12 @@ Distributed under MIT license.
 
 Dependencies: curl binary
 
+This is for those who have an EBS-backed EC2 instance that they use for development, which is started prior to use, and stopped afterwards. But of course, we all forget that last step sometimes.
+
 Run this at startup (from /etc/rc.local or similar). Daemonizes and stops instance when no one is logged in for <idle timeout> minutes. To run API tools in rc.local, you'll need the following:
 . /etc/profile.d/aws-apitools-common.sh
+
+Of course, if you also forget to log out (or your connection is severed) then the script will never trigger. If you use bash, add TMOUT=3600, for example, to your .bashrc to auto-logout after 1 hour.
 
 Of course, you should only use this with EBS-backed instances, which can be stopped and started without losing data, barring hardware or EC2 issues. (And to guard against those very issues, if you care about your instance data, you should issue a ec2-modify-instance-attribute --block-device-mapping /dev/sda1=:false <instanceid> to make sure your EBS volume is not auto-deleted if your instance happens to terminate prematurely.)
 
